ZOOKEEPER-3922: The introduction of the oracle, a failure detector. (#109)
The introduction of the oracle makes ZooKeeper fault-tolerant in two-node systems.

The major changes are:
1. QuorumPeerConfig.java
- The changes allow users to enable the oracle and provide essential information.
- Create QuorumOracleMaj if configured.
2. FastLeaderElection.java
- A re-check mechanism checks the current received votes once the timeout expires.
- Add another case when receiving a LEADING notification for a node to locate the existed leader in two-node systems.
3. Leader.java
- Add a re-validation of outstanding proposals mechanism after the only follower goes away
- Add another handling case when the quorum is not maintainable. It queries the Oracle for maintaining the quorum along.
4. QuorumVerifier.java
- Add methods for QuorumOracleMaj.java
5. QuorumOracleMaj.java (This is a new file.)
- A sub-class of QuorumMaj
- It default reads a file that contains a binary value to behave as an Oracle.

Author: Ching-Chan Lee <leechingchankyo@gmail.com>

Reviewers: Benjamin Reed <breed@apache.org>, Michael Han <hanm@apache.org>

Closes #1444 from chingchan1996/ZOOKEEPER-3922

Co-authored-by: Ching-Chan Lee <leechingchankyo@gmail.com>

--- a/zookeeper-server/pom.xml
+++ b/zookeeper-server/pom.xml
@@ -172,6 +172,12 @@
       <artifactId>snappy-java</artifactId>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
