ZOOKEEPER-4054: Make prometheus listen host can configure (#146)
Make prometheus listen host can configure listen IP, helpful to security. default is 0.0.0.0

Author: shoothzj <shooothzj@gmail.com>

Reviewers: Enrico Olivelli <eolivelli@apache.org>, maoling <maoling@apache.org>

Closes #1574 from Shoothzj/ZOOKEEPER-4054

Co-authored-by: shoothzj <shooothzj@gmail.com>

--- a/conf/zoo_sample.cfg
+++ b/conf/zoo_sample.cfg
@@ -31,6 +31,7 @@ clientPort=2181
 #
 # https://prometheus.io Metrics Exporter
 #metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider
+#metricsProvider.httpHost=0.0.0.0
 #metricsProvider.httpPort=7000
 #metricsProvider.exportJvmInfo=true
 
