ZOOKEEPER-4208: Adding more labels to asf.yaml file to position more to the ZooKeeper Project (#155)
- more details in the [ZOOKEEPER-4208](https://issues.apache.org/jira/browse/ZOOKEEPER-4208)

Author: maoling <maoling@apache.org>

Reviewers: Enrico Olivelli <eolivelli@apache.org>

Closes #1711 from maoling/ZOOKEEPER-4208

Co-authored-by: maoling <maoling@apache.org>

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -23,8 +23,19 @@ github:
   description: "Apache ZooKeeper"
   homepage: https://zookeeper.apache.org
   labels:
+    - java
+    - apache
     - zookeeper
+    - consensus
+    - coordination
+    - zab
     - database
+    - key-value
+    - distributed-database
+    - distributed-systems
+    - service-discovery
+    - configuration-management
+    - distributed-configuration
     - hacktoberfest
   features:
     wiki: false
