--- a/.harness/Zookeepr.yaml
+++ b/.harness/Zookeepr.yaml
@@ -18,6 +18,8 @@ pipeline:
         type: CI
         spec:
           cloneCodebase: true
+          caching:
+            enabled: true
           platform:
             os: Linux
             arch: Amd64
