--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,61 +28,19 @@ on:
     branches: [ '*' ]
   pull_request:
     branches: [ '*' ]
-
 jobs:
-  mvn:
-    strategy:
-      matrix:
-        profile:
-          - name: 'full-build-jdk8'
-            jdk: 8
-            args: '-Pfull-build apache-rat:check verify -DskipTests spotbugs:check checkstyle:check'
-          - name: 'full-build-jdk11'
-            jdk: 11
-            args: '-Pfull-build apache-rat:check verify -DskipTests spotbugs:check checkstyle:check'
-          - name: 'full-build-java-tests'
-            jdk: 11
-            args: '-Pfull-build verify -Dsurefire-forkcount=1 -DskipCppUnit -Dsurefire.rerunFailingTestsCount=5'
-          - name: 'full-build-cppunit-tests'
-            jdk: 11
-            args: '-Pfull-build verify -Dtest=_ -DfailIfNoTests=false'
-      fail-fast: false
-    timeout-minutes: 360
+  build:
+
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK ${{ matrix.profile.jdk }}
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        java-version: ${{ matrix.profile.jdk }}
-    - name: Cache local maven repository
-      uses: actions/cache@v2
+        java-version: '11'
+        distribution: 'temurin'
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        path: |
-          ~/.m2/repository/
-          !~/.m2/repository/org/apache/zookeeper
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-    - name: Show the first log message
-      run: git log -n1
-    - name: Install C Dependencies
-      run: sudo apt-get install libcppunit-dev libsasl2-dev
-    - name: Build with Maven (${{ matrix.profile.name }})
-      run: mvn -B -V -e -ntp "-Dstyle.color=always" ${{ matrix.profile.args }}
-      env:
-        MAVEN_OPTS: -Djansi.force=true
-    - name: Upload unit test results
-      if: ${{ failure() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: surefire-reports-${{ matrix.profile.name }}
-        path: ./**/target/surefire-reports/
-        if-no-files-found: ignore
-    - name: Upload integration test results
-      if: ${{ failure() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: failsafe-reports-${{ matrix.profile.name }}
-        path: ./**/target/failsafe-reports/
-        if-no-files-found: ignore
-
+        arguments: --build-cache unitTest -PmaxParallelForks=32 -PignoreFailures=true
+        DskipTests
