--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -39,8 +40,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: --build-cache unitTest -PmaxParallelForks=32 -PignoreFailures=true
-        DskipTests
+        cache: maven
+    - name: Build with Maven
+      run: 
+          mvn -B package --file pom.xml
+          mvn test
