--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,4 +42,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn test
+      run: mvn clean test
