--- a/.harness/Zookeepr.yaml
+++ b/.harness/Zookeepr.yaml
@@ -55,3 +55,5 @@ pipeline:
                       spec:
                         paths:
                           - "**/*.xml"
+        strategy:
+          parallelism: 4
