--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,4 +40,6 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Run Tests
       run: mvn clean test
