--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+        distribution: 'temurin'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run Tests
-      run: mvn clean test
+      run: mvn verify -DskipTests
