--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,3 +42,5 @@ jobs:
         distribution: 'temurin'
     - name: Run Tests
       run: mvn verify -DskipTests -Dmaven.test.failure.ignore=true
+    - name: Run Unit Tests
+      run: mvn -B test --file pom.xml
